--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "ext/Vulkan-Headers"]
 	path = ext/Vulkan-Headers
 	url = https://github.com/KhronosGroup/Vulkan-Headers
+	branch = sdk-1.3.261
 [submodule "ext/glfw"]
 	path = ext/glfw
 	url = https://github.com/glfw/glfw
