--- a/.github/workflows/ci-test-and-lint.yml
+++ b/.github/workflows/ci-test-and-lint.yml
@@ -13,6 +13,9 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+env:
+  ZIG_VERSION: 0.12.0
+
 jobs:
   test:
     strategy:
@@ -23,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: goto-bus-stop/setup-zig@v2
         with:
-          version: 0.11.0
+          version: ${{env.ZIG_VERSION}}
       - run: zig build test
   lint:
     runs-on: ubuntu-latest
@@ -31,5 +34,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: goto-bus-stop/setup-zig@v2
         with:
-          version: 0.11.0
+          version: ${{env.ZIG_VERSION}}
       - run: zig fmt --check .
