--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "ext/shaderc"]
 	path = ext/shaderc
 	url = https://github.com/google/shaderc
+[submodule "ext/miniaudio"]
+	path = ext/miniaudio
+	url = https://github.com/Sudoku-Boys/miniaudio
